--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/sugali-sampath-kumar-naik-a1155b258/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
-							<a href="https://github.com/rishabhnmishra" class="btn btn-white btn-outline-white py-3 px-4">Resume</a></p>
+							<a href="https://github.com/" class="btn btn-white btn-outline-white py-3 px-4">Resume</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -213,7 +213,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/about-me.JPEG" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/about-me.JPG" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
@@ -292,7 +292,7 @@
 									<span class="number" data-number="3">0</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/rishabhnmishra/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/sugali-sampath-kumar-naik-a1155b258/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -410,7 +410,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https:///rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.PNG');">
+              <a href="https:///rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.JPG');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -521,7 +521,7 @@
 						<h2>More projects on<span> Github soon </span> </h2>
 						<div class="heading"> <h4> Working on DevOps &amp; Projects soon </h4>
 						<br>
-						<p><a href="https://github.com/sampath970" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/SAMPATH9701" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
