--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/sugali-sampath-kumar-naik-a1155b258/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
-							<a href="https://github.com/" class="btn btn-white btn-outline-white py-3 px-4">Resume</a></p>
+							<a href="https://drive.google.com/file/d/1K6r-T3sMGW4zL29XHQEjR8bIA7ERM1IA/view?usp=drive_link">Resume</a></p>
 		            </div>
 		          </div>
 	        	</div>
