I have changed Projects2-url

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <p>Developed the "Examination System Automation
 					Using Natural Language Processing" to streamline
 					exam answer generation and evaluation. </p>
-              </div>
+	      </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
@@ -427,7 +427,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Artificial Intelligence And Machine Learning</a></h3>
+                <h3 class="heading"><a href="https://github.com">Artificial Intelligence And Machine Learning</a></h3>
                 <p>Developed and deployed machine learning models for
 					sales forecasting and sentiment analysis during an
 					AIML internship. Utilized Python, TensorFlow, Keras,
