updated HTML css - javascript

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>HTML css</span> <span class="pull-right">90%</span>
+									<span>JavaScript</span> <span class="pull-right">90%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
 											aria-valuemax="100"></div>
