--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 						<h2>More projects on<span> Github soon </span> </h2>
 						<div class="heading"> <h4> Working on DevOps &amp; Projects soon </h4>
 						<br>
-						<p><a href="https://github.com/SAMPATH9701" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/sampath970" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
