--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
 				</div>
 
-				<!-- <div class="col-md-6">
+				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2018-2021</span>
 						<h2>Senior Data Analyst</h2>
@@ -356,7 +356,7 @@
 						</p>
 					</div>
 
-				</div> -->
+				</div>
 			</div>
 
 		<br>
