--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2024-Present</span>
+						<span class="date">2024 June - 2024 August</span>
 						<h2>Freelancing</h2>
 						<span class="position">FRONT-END</span>
 						<p class="mt-4">Freelancing Project: Full-Stack Development
@@ -344,9 +344,9 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2018-2021</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">iQuanti</span>
+						<span class="date">2024 June- Present</span>
+						<h2>Industry Cover</h2>
+						<span class="position">DevOps Intern</span>
 						<p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
 							<ul>
 								<li>Performed in-depth market research and analysis to create online pages. Resulted in ~100% website growth and 30% increase in conversion rate YoY.</li>
