--- a/index.html
+++ b/index.html
@@ -313,6 +313,11 @@
             <p>Computer Science and Engineering graduate . With a strong focus on DevOps.I have hands-on experience in full-stack development</p>
           </div>
         </div>
+		<div class="row justify-content-center mt-5">
+			<div class="col-md-6 text-center ftco-animate">
+				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+			</div>
+		</div>
 
 		<div class="row">
 			<h1 class="big-4">Experience</h1>
@@ -344,7 +349,7 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2024 June- Present</span>
+						<span class="date">2024 June - Present</span>
 						<h2>Industry Cover</h2>
 						<span class="position">DevOps Intern</span>
 						<p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
