--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         </div>
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+				<p><a href="#" class="btn btn-primary py-4 px-5">Resume</a></p>
 			</div>
 		</div>
 
